[tool.poetry]
name = "alkemist-server"
version = "0.1.0"
description = "Alkemist IDE backend — FastAPI + LangGraph + Ollama"
authors = ["Alkemist Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
websockets = "^13.0"
httpx = "^0.27.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"
greenlet = "^3.1.0"
python-multipart = "^0.0.22"

# AI / LangGraph
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-ollama = "^0.2.0"
ollama = "^0.3.0"
"langsmith[otel]" = "==0.3.45"

# Vector DB
chromadb = "^0.5.0"

# Docker
docker = "^7.1.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"
structlog = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
pytest-cov = ">=5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
